--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start":"node backend/src/server.js"
-  },
+    "start":"npm run start --prefix backend"
+  },"engine":{
+    "node":">=20.0.0"
+  }
+,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PandeyVinay8765/Talent-iQ.git"
