--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start":"npm run start --prefix backend"
-  },"engine":{
-    "node":">=20.0.0"
+  },"engines":{
+    "node":">=22.0.0"
   }
 ,
   "repository": {
